@@ -7,7 +7,9 @@ export(find_rprofile)
 export(find_rprofile_d)
 export(install)
 export(renviron)
+export(renviron_d)
 export(rprofile)
+export(rprofile_d)
 export(startup)
 export(sysinfo)
 export(uninstall)
