@@ -2,8 +2,10 @@ unload <- function(debug = FALSE) unloadNamespace("startup")
 
 api <- function() {
   list(
-    renviron = renviron,
-    rprofile = rprofile,
-    unload   = unload
+    renviron   = renviron,     ## Deprecated
+    rprofile   = rprofile,     ## Deprecated
+    renviron_d = renviron_d,
+    rprofile_d = rprofile_d,
+    unload     = unload
   )
 }
