@@ -1,15 +1,17 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/renviron.R, R/rprofile.R, R/startup.R
-\name{renviron}
+\name{renviron_d}
 \alias{renviron}
+\alias{renviron_d}
 \alias{rprofile}
+\alias{rprofile_d}
 \alias{startup}
 \title{Load .Renviron.d and .Rprofile.d directories during the R startup process}
 \usage{
-renviron(sibling = FALSE, all = FALSE, unload = FALSE, skip = NA,
+renviron_d(sibling = FALSE, all = FALSE, unload = FALSE, skip = NA,
   debug = NA)
 
-rprofile(sibling = FALSE, all = FALSE, unload = FALSE, skip = NA,
+rprofile_d(sibling = FALSE, all = FALSE, unload = FALSE, skip = NA,
   debug = NA, on_error = c("error", "warning", "immediate.warning",
   "message", "ignore"))
 
@@ -42,11 +44,11 @@ The above is done in addition the \file{.Renviron} and
 }
 \section{Functions}{
 \itemize{
-\item \code{renviron}: Initiate using \file{.Renviron.d/} files
+\item \code{renviron_d}: Initiate using \file{.Renviron.d/} files
 
-\item \code{rprofile}: Initiate using \file{.Rprofile.d/} files
+\item \code{rprofile_d}: Initiate using \file{.Rprofile.d/} files
 
-\item \code{startup}: \code{renviron()} followed by \code{rprofile()} and then the package is unloaded
+\item \code{startup}: \code{renviron_d()} followed by \code{rprofile_d()} and then the package is unloaded
 }}
 \section{User-specific installation}{
 
@@ -74,13 +76,13 @@ should also be installed in the site-wide library.
 startup::startup()
 
 # For finer control of on exactly what files are used
-# functions renviron() and rprofile() are also available:
+# functions renviron_d() and rprofile_d() are also available:
 
 # Initiate first .Renviron.d/ found on search path
-startup::renviron()
+startup::renviron_d()
 
 # Initiate all .Rprofile.d/ directories found on the startup search path
-startup::rprofile(all = TRUE)
+startup::rprofile_d(all = TRUE)
 }
 
 }
